--- a/module 3/css/stylesheet.css
+++ b/module 3/css/stylesheet.css
@@ -29,7 +29,7 @@ body {
 	margin-top: 30px;
 }
 .navbar-header button.navbar-toggle:focus {
-	background-color: transparent;;
+	background-color: transparent;
 }
 .navbar-header button.navbar-toggle:active {
 	border-radius: 10px;
